fixed horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -681,7 +681,7 @@ img {
     padding-left: 16px;
     padding-top: 8px;
     padding-bottom: 8px;
-    margin-right: 24px;
+    margin-right: 0;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
