--- a/css/tablet.css
+++ b/css/tablet.css
@@ -182,6 +182,8 @@
     
     .subscribe-email {
         width: 264px;
+        margin-right: 24px;
     }
 
+    
 }
